# wg-lazy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wg_lazy/: __init__.py  __main__.py
src/wg_lazy/cmd/: __init__.py  add.py  base.py  cmdline.py  import_.py  new.py  rm.py  show.py
src/wg_lazy/conf/: __init__.py  datastores.py
src/wg_lazy/conf/base/: __init__.py  datastore.py  format.py  formatter.py  models.py  network.py  parser.py  peer.py  service.py
src/wg_lazy/conf/formats/: __init__.py  jsonformat.py  wgpeerformatter.py  wgquickformat.py
src/wg_lazy/conf/services/: __init__.py  appconfig.py  wgconfig.py
src/wg_lazy/consts/: __init__.py  defaults.py  limits.py
src/wg_lazy/utils/: __init__.py  helpers.py  network.py  wg.py
tests/: test_commands.py  test_datastores.py  test_formats.py  test_helpers.py  test_models.py  test_network.py  test_services.py  utils.py
tests/resources/: wg-mock.conf  wg-mock.json  wg-peer-mock.conf
